--- a/env.local.example
+++ b/env.local.example
@@ -1,39 +1,6 @@
-# Frontend Environment Variables for Fair Launchpad
+# Core Journey Module Configuration
+JOURNEY_VERSION=v1
 
-# Database
-DATABASE_URL=file:./prisma/testnet.db
-
-# JWT Secret
-JWT_SECRET=testnet-jwt-secret-key-for-fair-launchpad
-
-# World ID Configuration
-NEXT_PUBLIC_WORLD_ID_APP_ID=app_testnet_fair_launchpad_2024
-NEXT_PUBLIC_WORLD_ID_ACTION=verify-human-testnet
-NEXT_PUBLIC_WORLD_ID_SIGNAL=anti-bot-launchpad-testnet
-NEXT_PUBLIC_WORLD_APP_MODE=testnet
-
-# Privy Configuration
-NEXT_PUBLIC_PRIVY_APP_ID=cmg1jgvhy00j6l50cpsv0yt3e
-
-# WalletConnect Configuration (Legacy - now using Privy)
-NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=testnet_walletconnect_project_id
-
-# Environment
-NEXT_PUBLIC_ENVIRONMENT=testnet
-
-# RPC Configuration
-NEXT_PUBLIC_RPC_URL=https://rpc.testnet.worldchain.org
-NEXT_PUBLIC_CHAIN_ID=480
-
-# Smart Contract Addresses (Deployed on World Chain)
-NEXT_PUBLIC_GRADUATION_HANDLER_ADDRESS=0xDA0bab807633f07f013f94DD0E6A4F96F8742B53
-NEXT_PUBLIC_TOKEN_FACTORY_ADDRESS=0x7EF2e0048f5bAeDe046f6BF797943daF4ED8CB47
-NEXT_PUBLIC_BONDING_CURVE_ADDRESS=0xd9145CCE52D386f254917e481eB44e9943F39138
-NEXT_PUBLIC_WLD_TOKEN_ADDRESS=0x0000000000000000000000000000000000000000
-NEXT_PUBLIC_WORLD_ID_ADDRESS=0x0000000000000000000000000000000000000000
-NEXT_PUBLIC_UNISWAP_FACTORY_ADDRESS=0x0000000000000000000000000000000000000000
-NEXT_PUBLIC_POSITION_MANAGER_ADDRESS=0x0000000000000000000000000000000000000000
-
-# Sample Token (Created during deployment)
-NEXT_PUBLIC_SAMPLE_TOKEN_ADDRESS=0x0000000000000000000000000000000000000000
-
+# Add your existing environment variables below
+# NEXT_PUBLIC_PRIVY_APP_ID=your_privy_app_id
+# DATABASE_URL=your_database_url
