--- a/package.json
+++ b/package.json
@@ -1,79 +1,41 @@
 {
-  "name": "fair-launchpad-ui",
-  "version": "0.1.0",
+  "name": "fair-launchpad-world-app",
+  "version": "1.0.0",
+  "description": "Fair Launchpad - World App Mini App",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
-    "start:prod": "bash scripts/start-production.sh",
-    "deploy:testnet": "bash scripts/deploy-testnet.sh",
-    "testnet:build": "cp .env.testnet .env.local && npm run build",
-    "testnet:start": "cp .env.testnet .env.local && npm start",
-    "lint": "eslint",
-    "lint:fix": "eslint --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --watchAll=false",
-    "db:seed": "tsx scripts/seed-database.ts",
-    "db:reset": "npx prisma db push --force-reset && npm run db:seed",
-    "db:migrate": "npx prisma db push",
-    "db:generate": "npx prisma generate",
-    "db:studio": "npx prisma studio",
-    "docker:build": "docker build -t fair-launchpad-ui .",
-    "docker:run": "docker run -p 3000:3000 fair-launchpad-ui",
-    "health": "curl -f http://localhost:3000/api/health || exit 1"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@metamask/detect-provider": "^2.0.0",
-    "@prisma/client": "^6.16.2",
-    "@privy-io/react-auth": "^3.0.1",
-    "@privy-io/wagmi": "^2.0.0",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-progress": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tabs": "^1.1.13",
-    "@tanstack/react-query": "^5.87.1",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@walletconnect/modal": "^2.7.0",
-    "@walletconnect/web3-provider": "^1.8.0",
-    "@worldcoin/minikit-js": "^1.9.6",
-    "@worldcoin/minikit-react": "^1.9.7",
-    "bcryptjs": "^3.0.2",
-    "class-variance-authority": "^0.7.1",
+    "@worldcoin/mini-apps-ui-kit-react": "^1.0.2",
+    "@worldcoin/minikit-js": "latest",
+    "@worldcoin/minikit-react": "latest",
     "clsx": "^2.1.1",
-    "ethers": "^6.15.0",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.543.0",
-    "next": "15.5.2",
-    "prisma": "^6.16.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1",
-    "viem": "^2.37.5",
-    "wagmi": "^2.16.9",
-    "zod": "^3.25.76"
+    "iconoir-react": "^7.11.0",
+    "next": "15.2.3",
+    "next-auth": "^5.0.0-beta.25",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.2.0",
+    "viem": "2.23.5",
+    "lucide-react": "^0.400.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.13",
-    "@testing-library/jest-dom": "^6.8.0",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
-    "@types/jest": "^30.0.0",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.21",
+    "eruda": "^3.4.1",
     "eslint": "^9",
-    "eslint-config-next": "15.5.2",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.13",
-    "tsx": "^4.20.5",
+    "eslint-config-next": "15.2.3",
+    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
