feat: implement Design System V2 with G8 app
🎨 Design System V2 Features:
- Complete theme system with colors, gradients, and typography
- Reusable UI components (ButtonV2, CardV2, InputV2)
- Navigation components with bottom tab bar
- Token components with multiple variants
- Chart components for price visualization
- Layout components (ScreenV2, G8Screen)

🚀 G8 App Implementation:
- Complete G8 app with all screens
- Home screen with trending tokens
- Create token flow
- G8 graduation zone
- User profile with stats
- Bottom navigation system

🔧 Backend Integration:
- Real database operations with Prisma
- World ID and Privy service integration
- Performance monitoring and caching
- Security middleware and rate limiting
- Health check endpoints

📱 Demo Pages:
- /ui-v2-demo - Full G8 app
- /ui-v2-minimal - Minimal version
- /ui-v2-debug - Step-by-step debugging
- /test-simple - Basic functionality test

✨ Key Features:
- Dark theme with neon gradients
- Mobile-first responsive design
- TypeScript support throughout
- Component composition architecture
- Production-ready optimization

--- a/package.json
+++ b/package.json
@@ -1,36 +1,55 @@
 {
-  "name": "fair-launchpad-world-app",
-  "version": "1.0.0",
-  "description": "Fair Launchpad - World App Mini App",
+  "name": "fair-launchpad-ui",
+  "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio",
+    "db:seed": "tsx prisma/seed.ts",
+    "type-check": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
+    "@prisma/client": "^5.7.1",
+    "@tanstack/react-query": "^5.17.0",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "iconoir-react": "^7.11.0",
-    "lucide-react": "^0.400.0",
-    "next": "15.2.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.2.0"
+    "clsx": "^2.0.0",
+    "date-fns": "^3.0.6",
+    "ethers": "^6.8.1",
+    "lucide-react": "^0.294.0",
+    "next": "14.0.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-hook-form": "^7.48.2",
+    "recharts": "^2.8.0",
+    "tailwind-merge": "^2.2.0",
+    "viem": "^1.19.9",
+    "wagmi": "^1.4.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@types/jest": "^29.5.8",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.3",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.13",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
+    "jest": "^29.7.0",
+    "postcss": "^8",
+    "prisma": "^5.22.0",
+    "tailwindcss": "^3.3.0",
+    "ts-jest": "^29.1.1",
+    "tsx": "^4.6.2",
     "typescript": "^5"
   }
 }
