--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/postcss": "^4.1.14",
     "@tanstack/react-query": "^5.17.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
     "date-fns": "^3.0.6",
     "ethers": "^6.8.1",
     "framer-motion": "^12.23.22",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
     "react": "^18",
