🗄️ Configure Vercel Postgres - Production Database Setup
- Updated Prisma schema to use PostgreSQL instead of SQLite
- Removed mock data fallbacks from API routes
- Added proper production database configuration
- Created setup guide for Vercel Postgres integration

This provides a production-grade database solution tailored for Vercel's serverless platform.

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "env": {
     "NODE_ENV": "production",
     "NEXT_PUBLIC_ENVIRONMENT": "testnet",
-    "DATABASE_URL": "file:./dev.db",
+    "DATABASE_URL": "@postgres_url",
     "NEXTAUTH_SECRET": "fair-launchpad-test-secret-key-2024",
     "NEXT_PUBLIC_WORLD_ID_API_KEY": "test-world-id-api-key",
     "WORLD_ID_APP_ID": "test-world-id-app-id",
