feat: Add Alchemy integration for enhanced community features
- Updated G8 Revised Strategy to include Alchemy integration
- Created comprehensive Alchemy Integration Plan document
- Implemented Alchemy client and token analytics
- Added webhook support for community event notifications
- Created gas-less transaction system for community actions
- Built Alchemy-powered community dashboard component
- Added Alchemy demo page with real-time blockchain data
- Updated navigation to include Alchemy demo tab
- Enhanced environment configuration for Alchemy
- Integrated real-time data, webhooks, and gas-less transactions

Key Features:
- Real-time token analytics and community insights
- Webhook notifications for community events
- Gas-less transactions for community actions
- Multi-chain support for future expansion
- Advanced community engagement analytics
- Superior data accuracy and performance

This integration significantly enhances G8's community-first approach
by providing real-time blockchain data, gas-less transactions, and
advanced analytics that create a superior user experience and
competitive advantage over competitors like PUF.

--- a/env.local.example
+++ b/env.local.example
@@ -4,3 +4,13 @@ JOURNEY_VERSION=v1
 # Add your existing environment variables below
 # NEXT_PUBLIC_PRIVY_APP_ID=your_privy_app_id
 # DATABASE_URL=your_database_url
+
+# Alchemy Integration
+ALCHEMY_API_KEY=your_alchemy_api_key
+ALCHEMY_WEBHOOK_URL=your_webhook_url
+ALCHEMY_SPONSOR_ADDRESS=your_sponsor_address
+ALCHEMY_NETWORK=worldchain-sepolia
+
+# Contract Addresses
+TOKEN_FACTORY_ADDRESS=your_token_factory_address
+BONDING_CURVE_ADDRESS=your_bonding_curve_address
