--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@tailwindcss/postcss": "^4.1.14",
     "@tanstack/react-query": "^5.17.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "alchemy-sdk": "^3.6.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
     "date-fns": "^3.0.6",
